# cli_animate

./: Cargo.toml  LICENSE  README.md
example/: main.rs
src/: interactive_menu.rs  lib.rs  loading_indicator.rs  progress.rs  utils.rs
